--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <script
         type="text/javascript">WebFont.load({ google: { families: ["Open Sans:300,300italic,400,400italic,600,600italic,700,700italic,800,800italic", "Roboto:300,regular,500"] } });</script>
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" type="text/javascript"></script><![endif]-->
-    <script
-        type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script>
+    <!-- <script
+        type="text/javascript">!function (o, c) { var n = c.documentElement, t = " w-mod-"; n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch") }(window, document);</script> -->
     <link href="./assets/imgs/favicon/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="./assets/imgs/favicon/apple-touch-icon.png" rel="apple-touch-icon">
     <link href="./styles/index.css" rel="stylesheet" type="text/css">
@@ -30,19 +30,24 @@
                 <img class="logo" src="./assets/imgs/logo.png" />
             </a>
             <nav role="navigation" class="navigation-menu w-nav-menu">
-                <a href="/" aria-current="page" class="navigation-link w-nav-link w--current" style="max-width: 940px;">
+                <a href="#home" aria-current="page" class="navigation-link w-nav-link w--current" style="max-width: 940px;" 
+                    onclick="scrollToElement('home')">
                     Home
                 </a>
                 <a href="#about" class="navigation-link w-nav-link" style="max-width: 940px;"
                     onclick="scrollToElement('about')">
                     Sobre nós
                 </a>
-                <a href="#about" class="navigation-link w-nav-link" style="max-width: 940px;"
-                    onclick="scrollToElement('about')">
+                <a href="#work" class="navigation-link w-nav-link" style="max-width: 940px;"
+                    onclick="scrollToElement('work')">
                     O que fazemos?
                 </a>
-                <a href="#about" class="navigation-link w-nav-link contact" style="max-width: 940px;"
-                    onclick="scrollToElement('about')">
+                <a href="#tab-section" class="navigation-link w-nav-link" style="max-width: 940px;"
+                    onclick="scrollToElement('tab-section')">
+                    Empresa
+                </a>
+                <a href="https://wa.link/9dmvzm" target="_blank" class="navigation-link w-nav-link contact" style="max-width: 940px;"
+                onclick="scrollToElement('tab-section')">
                     Contato
                 </a>
             </nav>
@@ -53,7 +58,7 @@
         </div>
         <div class="w-nav-overlay" data-wf-ignore="" id="w-nav-overlay-0"></div>
     </div>
-    <div class="header-logo hero-section centered">
+    <div class="header-logo hero-section centered" id="home">
         <div data-w-id="e464d218-f801-55d1-1f50-7da00b5bfb8f"
             style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
             class="w-container">
@@ -116,68 +121,65 @@
     </div>
     <div class="section-bg section accent">
         <div class="w-container">
-            <div class="section-title-group">
+            <div class="section-title-group" id="work">
                 <h2 class="section-heading centered white">O que fazemos?</h2>
                 <div class="section-subheading center off-white">Conheça um pouco mais sobre o nosso trabalho.</div>
             </div>
             <div class="w-row">
                 <div class="w-col w-col-6">
                     <div class="white-box transparent"><img
-                            src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1acb41b9310a_city-scape.jpg"
-                            srcset="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1acb41b9310a_city-scape-p-500x334.jpeg 500w, https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1acb41b9310a_city-scape-p-1080x721.jpeg 1080w, https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1acb41b9310a_city-scape.jpg 1300w"
+                            src="./assets/imgs/notes.jpg"                            
                             sizes="(max-width: 479px) 85vw, (max-width: 767px) 88vw, (max-width: 991px) 324px, 430px"
                             alt="" class="fullwidth-image">
-                        <h3 class="white-text">SERVICES one</h3>
+                        <h3 class="white-text">Título</h3>
                         <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
                             varius enim in eros elementum tristique.Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Suspendisse varius.</p><a href="#" class="hollow-button">Learn more</a>
+                            elit. Suspendisse varius.</p><a href="#" class="hollow-button">Saiba mais</a>
                     </div>
                 </div>
                 <div class="w-col w-col-6">
                     <div class="white-box transparent"><img
-                            src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1ab359b9312c_photo-1416400639808-f41f0c149b09.jpg"
-                            srcset="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1ab359b9312c_photo-1416400639808-f41f0c149b09-p-1080x721.jpeg 1080w, https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1ab359b9312c_photo-1416400639808-f41f0c149b09.jpg 1300w"
+                            src="./assets/imgs/book-glasses.jpg"   
                             sizes="(max-width: 479px) 85vw, (max-width: 767px) 88vw, (max-width: 991px) 324px, 430px"
                             alt="" class="fullwidth-image">
-                        <h3 class="white-text">SERVICES two</h3>
+                        <h3 class="white-text">Título</h3>
                         <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
                             varius enim in eros elementum tristique.Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Suspendisse varius.</p><a href="#" class="hollow-button all-caps">Learn more</a>
+                            elit. Suspendisse varius.</p><a href="#" class="hollow-button all-caps">Saiba mais</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <!-- <div class="section">
+    <div class="section" id="tab-section">
         <div class="w-container">
             <div class="section-title-group">
-                <h2 class="section-heading centered">Tab Section</h2>
-                <div class="section-subheading center">This is some text inside of a div block.</div>
+                <h2 class="section-heading centered">A empresa</h2>
+                <div class="section-subheading center">Lorem ipsum dolor sit amet, consectetur.</div>
             </div>
             <div data-duration-in="300" data-duration-out="100" class="tabs-wrapper w-tabs">
                 <div class="tab-menu w-tab-menu" role="tablist"><a data-w-tab="Tab 1"
                         class="button tab w-inline-block w-tab-link w--current" id="w-tabs-0-data-w-tab-0"
                         href="#w-tabs-0-data-w-pane-0" role="tab" aria-controls="w-tabs-0-data-w-pane-0"
                         aria-selected="true">
-                        <div>Tab Button 1</div>
+                        <div>Título</div>
                     </a><a data-w-tab="Tab 2" class="button tab w-inline-block w-tab-link" tabindex="-1"
                         id="w-tabs-0-data-w-tab-1" href="#w-tabs-0-data-w-pane-1" role="tab"
                         aria-controls="w-tabs-0-data-w-pane-1" aria-selected="false">
-                        <div>Tab Button 2</div>
+                        <div>Título</div>
                     </a><a data-w-tab="Tab 3" class="button tab w-inline-block w-tab-link" tabindex="-1"
                         id="w-tabs-0-data-w-tab-2" href="#w-tabs-0-data-w-pane-2" role="tab"
                         aria-controls="w-tabs-0-data-w-pane-2" aria-selected="false">
-                        <div>Tab Button 3</div>
+                        <div>Título</div>
                     </a></div>
                 <div class="w-tab-content">
                     <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active" id="w-tabs-0-data-w-pane-0" role="tabpanel"
                         aria-labelledby="w-tabs-0-data-w-tab-0">
                         <div><img
-                                src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a316cb93127_photo-1422222948315-28aadb7a2cb8.jpg"
-                                srcset="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a316cb93127_photo-1422222948315-28aadb7a2cb8-p-1080x721.jpeg 1080w, https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a316cb93127_photo-1422222948315-28aadb7a2cb8.jpg 1300w"
+                                src="./assets/imgs/hammer.jpg"   
                                 sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" alt=""
                                 class="fullwidth-image">
-                            <h2>Some Title Here</h2>
+                            <h2>Título</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                                 elementum tristique. <br>Duis cursus, mi quis viverra ornare, eros dolor interdum nulla,
                                 ut commodo diam libero vitae erat. <br>Aenean faucibus nibh et justo cursus id rutrum
@@ -187,11 +189,10 @@
                     <div data-w-tab="Tab 2" class="w-tab-pane" id="w-tabs-0-data-w-pane-1" role="tabpanel"
                         aria-labelledby="w-tabs-0-data-w-tab-1">
                         <div><img
-                                src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1ab3f1b93110_5fcb0a55.jpg"
-                                srcset="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1ab3f1b93110_5fcb0a55-p-500x334.jpeg 500w, https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1ab3f1b93110_5fcb0a55.jpg 1300w"
+                                src="./assets/imgs/library.jpg"   
                                 sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" alt=""
                                 class="fullwidth-image">
-                            <h2>Heading</h2>
+                            <h2>Título</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                                 elementum tristique. <br>Duis cursus, mi quis viverra ornare, eros dolor interdum nulla,
                                 ut commodo diam libero vitae erat.<br>Aenean faucibus nibh et justo cursus id rutrum
@@ -201,11 +202,10 @@
                     <div data-w-tab="Tab 3" class="w-tab-pane" id="w-tabs-0-data-w-pane-2" role="tabpanel"
                         aria-labelledby="w-tabs-0-data-w-tab-2">
                         <div><img
-                                src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a4509b93139_5cf8b62b.jpg"
-                                srcset="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a4509b93139_5cf8b62b-p-500x333.jpeg 500w, https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a4509b93139_5cf8b62b-p-800x532.jpeg 800w, https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a4509b93139_5cf8b62b-p-1080x718.jpeg 1080w, https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a4509b93139_5cf8b62b.jpg 1300w"
+                                src="./assets/imgs/notes.jpg"   
                                 sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" alt=""
                                 class="fullwidth-image">
-                            <h2>Heading</h2>
+                            <h2>Título</h2>
                         </div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
                             elementum tristique. <br>Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut
@@ -215,7 +215,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
     <div class="footer">
         <div class="w-container">
             <div class="w-row">
@@ -253,8 +253,8 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5e4b18feebfd1a721bb930e6"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <!-- <script src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/js/webflow.f96fbf115.js"
-        type="text/javascript"></script> -->
+    <script src="./js/webflow.js"
+        type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
     <!-- <a class="w-webflow-badge" href="https://webflow.com?utm_campaign=brandjs"><img
             src="https://d3e54v103j8qbb.cloudfront.net/img/webflow-badge-icon.f67cd735e3.svg" alt=""
