Alteração de imagens

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <div class="w-container header"><a href="/" aria-current="page" class="brand-link w-nav-brand w--current"
                 aria-label="home">
                 <!-- <h1 class="brand-text">A.R.V.T</h1> -->
-                <img class="logo" src="./assets/imgs/logo.png" />
+                <img class="logo" src="./assets/imgs/logo-white-transparent.png" />
             </a>
             <nav role="navigation" class="navigation-menu w-nav-menu">
-                <a href="#home" aria-current="page" class="navigation-link w-nav-link w--current" style="max-width: 940px;" 
-                    onclick="scrollToElement('home')">
+                <a href="#home" aria-current="page" class="navigation-link w-nav-link w--current"
+                    style="max-width: 940px;" onclick="scrollToElement('home')">
                     Home
                 </a>
                 <a href="#about" class="navigation-link w-nav-link" style="max-width: 940px;"
@@ -46,8 +46,8 @@
                     onclick="scrollToElement('tab-section')">
                     Empresa
                 </a>
-                <a href="https://wa.link/9dmvzm" target="_blank" class="navigation-link w-nav-link contact" style="max-width: 940px;"
-                onclick="scrollToElement('tab-section')">
+                <a href="https://wa.link/9dmvzm" target="_blank" class="navigation-link w-nav-link contact"
+                    style="max-width: 940px;" onclick="scrollToElement('tab-section')">
                     Contato
                 </a>
             </nav>
@@ -62,7 +62,7 @@
         <div data-w-id="e464d218-f801-55d1-1f50-7da00b5bfb8f"
             style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
             class="w-container">
-            <img class="bg-header" src="./assets/imgs/600x400-transparent.png" />
+            <img class="bg-header" src="./assets/imgs/logo-dark-tranparent.png" />
 
             <!-- <h1 data-ix="fade-in-bottom-page-loads" class="hero-heading">A.R.V.T</h1>
             <div data-ix="fade-in-bottom-page-loads" class="hero-subheading">Associação Revisão da Vida Toda</div> -->
@@ -127,8 +127,7 @@
             </div>
             <div class="w-row">
                 <div class="w-col w-col-6">
-                    <div class="white-box transparent"><img
-                            src="./assets/imgs/notes.jpg"                            
+                    <div class="white-box transparent"><img src="./assets/imgs/notes.jpg"
                             sizes="(max-width: 479px) 85vw, (max-width: 767px) 88vw, (max-width: 991px) 324px, 430px"
                             alt="" class="fullwidth-image">
                         <h3 class="white-text">Título</h3>
@@ -138,8 +137,7 @@
                     </div>
                 </div>
                 <div class="w-col w-col-6">
-                    <div class="white-box transparent"><img
-                            src="./assets/imgs/book-glasses.jpg"   
+                    <div class="white-box transparent"><img src="./assets/imgs/book-glasses.jpg"
                             sizes="(max-width: 479px) 85vw, (max-width: 767px) 88vw, (max-width: 991px) 324px, 430px"
                             alt="" class="fullwidth-image">
                         <h3 class="white-text">Título</h3>
@@ -175,8 +173,7 @@
                 <div class="w-tab-content">
                     <div data-w-tab="Tab 1" class="w-tab-pane w--tab-active" id="w-tabs-0-data-w-pane-0" role="tabpanel"
                         aria-labelledby="w-tabs-0-data-w-tab-0">
-                        <div><img
-                                src="./assets/imgs/hammer.jpg"   
+                        <div><img src="./assets/imgs/hammer.jpg"
                                 sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" alt=""
                                 class="fullwidth-image">
                             <h2>Título</h2>
@@ -188,8 +185,7 @@
                     </div>
                     <div data-w-tab="Tab 2" class="w-tab-pane" id="w-tabs-0-data-w-pane-1" role="tabpanel"
                         aria-labelledby="w-tabs-0-data-w-tab-1">
-                        <div><img
-                                src="./assets/imgs/library.jpg"   
+                        <div><img src="./assets/imgs/library.jpg"
                                 sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" alt=""
                                 class="fullwidth-image">
                             <h2>Título</h2>
@@ -201,8 +197,7 @@
                     </div>
                     <div data-w-tab="Tab 3" class="w-tab-pane" id="w-tabs-0-data-w-pane-2" role="tabpanel"
                         aria-labelledby="w-tabs-0-data-w-tab-2">
-                        <div><img
-                                src="./assets/imgs/notes.jpg"   
+                        <div><img src="./assets/imgs/notes.jpg"
                                 sizes="(max-width: 767px) 96vw, (max-width: 991px) 728px, 940px" alt=""
                                 class="fullwidth-image">
                             <h2>Título</h2>
@@ -253,8 +248,7 @@
     <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5e4b18feebfd1a721bb930e6"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="./js/webflow.js"
-        type="text/javascript"></script>
+    <script src="./js/webflow.js" type="text/javascript"></script>
     <!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
     <!-- <a class="w-webflow-badge" href="https://webflow.com?utm_campaign=brandjs"><img
             src="https://d3e54v103j8qbb.cloudfront.net/img/webflow-badge-icon.f67cd735e3.svg" alt=""
