Adicionando os textos

--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
             <nav role="navigation" class="navigation-menu w-nav-menu">
                 <a href="#home" aria-current="page" class="navigation-link w-nav-link w--current"
                     style="max-width: 940px;" onclick="scrollToElement('home')">
-                    Home
+                    Início
                 </a>
                 <a href="#about" class="navigation-link w-nav-link" style="max-width: 940px;"
                     onclick="scrollToElement('about')">
-                    Sobre nós
+                    Quem somos
                 </a>
                 <a href="#work" class="navigation-link w-nav-link" style="max-width: 940px;"
                     onclick="scrollToElement('work')">
-                    O que fazemos?
+                    O que é a revisão?
                 </a>
-                <a href="#tab-section" class="navigation-link w-nav-link" style="max-width: 940px;"
+                <!-- <a href="#tab-section" class="navigation-link w-nav-link" style="max-width: 940px;"
                     onclick="scrollToElement('tab-section')">
                     Empresa
-                </a>
+                </a> -->
                 <a href="https://wa.link/9dmvzm" target="_blank" class="navigation-link w-nav-link contact"
                     style="max-width: 940px;" onclick="scrollToElement('tab-section')">
                     Contato
@@ -73,83 +73,124 @@
     <div class="section">
         <div class="w-container">
             <div class="section-title-group" id="about">
-                <h2 class="section-heading centered">Sobre nós</h2>
-                <div class="section-subheading center">Lorem Ipsum is simply dummy text of the printing and typesetting
-                    industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an
-                    unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived
-                    not only five centuries, but also the leap into electronic typesetting, remaining essentially
-                    unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem
-                    Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including
-                    versions of Lorem Ipsum.</div>
+                <h2 class="section-heading centered">Quem somos</h2>
+                <div class="section-subheading" style="text-align: left;">QUEM SOMOS
+                    <p>
+                        Somos um Grupo de aposentados com direito à Revisão da Vida Toda – RVT, familiares e
+                        simpatizantes
+                        do tema, que nos unimos para defender nossos direitos diante do INSS e do Judiciário.
+                    </p>
+                    <p>
+                        O Grupo foi criado e idealizado em março de 2021, sob a liderança do aposentado Frederico
+                        Ruckert,
+                        através de uma comunidade no Facebook, que possibilitou a interação e união de diversos outros
+                        aposentados de diferentes localidades do país.
+                    </p>
+                    <p>
+                        Acompanhamos assiduamente toda a discussão relativa ao assunto, inclusive sendo manchete em
+                        importantes noticiários que deram visibilidade a nossa atuação ativa no Tema 1102, de
+                        repercussão
+                        geral no STF.
+                    </p>
+                    <p>
+                        O grupo que iniciou como “Lesados pelo INSS – Revisão da Vida Toda”, hoje conta com mais de mil
+                        e
+                        oitocentos participantes e, com o suporte jurídico do Dr. Bernardo Rücker, se transformou em uma
+                        Associação, que tem como objetivo a defesa dos direitos dos aposentados e seus respectivos
+                        dependentes, especialmente àqueles prejudicados pela sistemática de cálculo adotada pela
+                        Previdência
+                        Social, que acaba por excluir os salários recebidos antes de julho de 1994.
+                        Nosso principal objetivo é o apoio à justiça nessa busca pela efetivação dos direitos dos
+                        segurados,
+                        de forma a facilitar acordos administrativos e prezar pela resolução de maneira célere e eficaz,
+                        assegurando que os beneficiários possam desfrutar de seus direitos e proventos em vida.
+                    </p>
+                    <p>
+                        Além disso, temos o importante intuito de promover a conscientização dos segurados a respeito de
+                        seus direitos e polêmicas relacionadas às suas aposentadorias, divulgando esses temas, bem como
+                        incentivando e promovendo o debate democrático.
+                    </p>
+                </div>
             </div>
             <div class="w-row">
                 <div class="w-col w-col-4">
                     <div data-w-id="270e8437-efa3-df11-d438-de69b23e41e9"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                        class="white-box"><img
-                            src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a6bf8b930f3_feather-15-white.svg"
-                            alt="" class="grid-image">
-                        <h3>Title 1</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                            elementum tristique.</p>
+                        class="white-box"><img src="./assets/imgs/mission.png" alt="" class="grid-image">
+                        <h3>Missão</h3>
+                        <p>Atuar de maneira célere e eficaz na garantia dos direitos dos aposentados.</p>
                     </div>
                 </div>
                 <div class="w-col w-col-4">
                     <div data-w-id="29c25774-570b-ddb2-69b5-f4ddbb194afd"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                        class="white-box"><img
-                            src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1abad7b93103_feather2-17-white.svg"
-                            width="210" alt="" class="grid-image">
-                        <h3>Title 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                            elementum tristique.</p>
+                        class="white-box"><img src="./assets/imgs/vision.png" width="210" alt="" class="grid-image">
+                        <h3>Visão</h3>
+                        <p>Consolidar-se como associação de apoio à justiça e aos aposentados lesados pela Revisão da
+                            Vida Toda. </p>
                     </div>
                 </div>
                 <div class="w-col w-col-4">
                     <div data-w-id="49e69b8a-ef40-4d84-1f92-d2617143b8db"
                         style="opacity: 1; transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
-                        class="white-box"><img
-                            src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1aa9b8b9312b_feather2-22-white.svg"
-                            alt="" class="grid-image">
-                        <h3>Title 3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                            elementum tristique.</p>
+                        class="white-box"><img src="./assets/imgs/value.png" alt="" class="grid-image">
+                        <h3>Valores</h3>
+                        <p>Compromisso com os aposentados;
+                            Dedicação;
+                            Ética;
+                            Transparência;</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="section-bg section accent">
+    <div class="section-bg section bg-work">
         <div class="w-container">
             <div class="section-title-group" id="work">
-                <h2 class="section-heading centered white">O que fazemos?</h2>
-                <div class="section-subheading center off-white">Conheça um pouco mais sobre o nosso trabalho.</div>
+                <h2 class="section-heading centered white">O QUE É A REVISÃO DA VIDA TODA?</h2>
+                <!-- <div class="section-subheading justify">De modo bastante simples a Revisão da Vida Toda,
+                    nada
+                    mais é do que a ampliação do período básico de cálculo, passando a considerar todos os salários de
+                    contribuição que o segurado teve ao longo de sua vida laboral, e não somente aqueles posteriores a
+                    julho de 1994.
+                    Mas atenção, essa revisão é realmente um direito de exceção, pois apenas será vantajosa para os
+                    segurados que possuíram os seus maiores salários antes desta data. Por isso, é extremamente
+                    importante realizar o cálculo, para verificar se no seu caso essa nova sistemática realmente irá
+                    beneficiar, pois há a possibilidade de te prejudicar e reduzir o valor do seu benefício.
+                    Além disso, é necessário verificar o período em que a aposentadoria foi concedida. Apenas se valerão
+                    dessa regra, aqueles que tiveram seu benefício concedido nos últimos 10 anos, limitados a data da
+                    Reforma da Previdência (13/11/2019).</div> -->
             </div>
             <div class="w-row">
-                <div class="w-col w-col-6">
-                    <div class="white-box transparent"><img src="./assets/imgs/notes.jpg"
+                <div class="w-col w-col-12">
+                    <div class="white-box transparent"><img src="./assets/imgs/hammer.jpg"
                             sizes="(max-width: 479px) 85vw, (max-width: 767px) 88vw, (max-width: 991px) 324px, 430px"
                             alt="" class="fullwidth-image">
-                        <h3 class="white-text">Título</h3>
-                        <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                            varius enim in eros elementum tristique.Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Suspendisse varius.</p><a href="#" class="hollow-button">Saiba mais</a>
-                    </div>
-                </div>
-                <div class="w-col w-col-6">
-                    <div class="white-box transparent"><img src="./assets/imgs/book-glasses.jpg"
-                            sizes="(max-width: 479px) 85vw, (max-width: 767px) 88vw, (max-width: 991px) 324px, 430px"
-                            alt="" class="fullwidth-image">
-                        <h3 class="white-text">Título</h3>
-                        <p class="white-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
-                            varius enim in eros elementum tristique.Lorem ipsum dolor sit amet, consectetur adipiscing
-                            elit. Suspendisse varius.</p><a href="#" class="hollow-button all-caps">Saiba mais</a>
+                        <p class="white-text justify">De modo bastante simples a Revisão da Vida Toda,
+                            nada
+                            mais é do que a ampliação do período básico de cálculo, passando a considerar todos os
+                            salários de
+                            contribuição que o segurado teve ao longo de sua vida laboral, e não somente aqueles
+                            posteriores a
+                            julho de 1994.
+                            Mas atenção, essa revisão é realmente um direito de exceção, pois apenas será vantajosa para
+                            os
+                            segurados que possuíram os seus maiores salários antes desta data. Por isso, é extremamente
+                            importante realizar o cálculo, para verificar se no seu caso essa nova sistemática realmente
+                            irá
+                            beneficiar, pois há a possibilidade de te prejudicar e reduzir o valor do seu benefício.
+                            Além disso, é necessário verificar o período em que a aposentadoria foi concedida. Apenas se
+                            valerão
+                            dessa regra, aqueles que tiveram seu benefício concedido nos últimos 10 anos, limitados a
+                            data da
+                            Reforma da Previdência (13/11/2019).</p>
+                        <!-- <a href="#" class="hollow-button">Saiba mais</a> -->
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="section" id="tab-section">
+    <!-- <div class="section" id="tab-section">
         <div class="w-container">
             <div class="section-title-group">
                 <h2 class="section-heading centered">A empresa</h2>
@@ -210,21 +251,22 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="footer">
         <div class="w-container">
             <div class="w-row">
                 <div class="spc w-col w-col-4">
-                    <h5>Informações</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                        elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo
-                        diam libero vitae erat.</p>
+                    <h5>Para mais informações.</h5>
+                    <p>
+                        <a class="link" href="mailto:contato@associacaorvt.com.br">contato@associacaorvt.com.br</a>
+                    </p>
                 </div>
                 <div class="spc w-col w-col-4">
                     <h5>Links</h5>
-                    <a href="#" class="footer-link">Sobre nós</a>
-                    <a href="#" class="footer-link">O que fazemos?</a>
-                    <a href="#" class="footer-link">Contato</a>
+                    <a href="#" class="footer-link" onclick="scrollToElement('home')">Início</a>
+                    <a href="#about" class="footer-link" onclick="scrollToElement('about')">Quem somos</a>
+                    <a href="#work" class="footer-link" onclick="scrollToElement('work')">O que é a revisão?</a>
+                    <a href="https://wa.link/9dmvzm" class="footer-link">Contato</a>
                 </div>
                 <div class="w-col w-col-4">
                     <h5>social</h5>
