Remove "Quem somos" duplicado

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="w-container">
             <div class="section-title-group" id="about">
                 <h2 class="section-heading centered">Quem somos</h2>
-                <div class="section-subheading" style="text-align: left;">QUEM SOMOS
+                <div class="section-subheading" style="text-align: left;">
                     <p>
                         Somos um Grupo de aposentados com direito à Revisão da Vida Toda – RVT, familiares e
                         simpatizantes
