Escurencendo os textos e adicionando icone do linkedin

--- a/index.html
+++ b/index.html
@@ -266,17 +266,15 @@
                     <a href="#" class="footer-link" onclick="scrollToElement('home')">Início</a>
                     <a href="#about" class="footer-link" onclick="scrollToElement('about')">Quem somos</a>
                     <a href="#work" class="footer-link" onclick="scrollToElement('work')">O que é a revisão?</a>
-                    <a href="https://wa.link/9dmvzm" class="footer-link">Contato</a>
+                    <a href="https://wa.link/9dmvzm" class="footer-link" target="_blank">Contato</a>
                 </div>
                 <div class="w-col w-col-4">
                     <h5>social</h5>
-                    <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a3b71b93135_social-18.svg"
-                            width="20" alt="" class="info-icon"><a href="#" class="footer-link with-icon">Twitter</a>
+                    <div class="footer-link-wrapper w-clearfix"><img src="./assets/imgs/linkedin.svg" width="20" alt=""
+                            class="info-icon"><a href="#" class="footer-link with-icon">Linkedin</a>
                     </div>
-                    <div class="footer-link-wrapper w-clearfix"><img
-                            src="https://assets.website-files.com/5e4b18feebfd1a721bb930e6/5e4b18feebfd1a0b47b9311e_social-03.svg"
-                            width="20" alt="" class="info-icon"><a href="#" class="footer-link with-icon">Facebook</a>
+                    <div class="footer-link-wrapper w-clearfix"><img src="./assets/imgs/facebook.svg" width="20" alt=""
+                            class="info-icon"><a href="#" class="footer-link with-icon">Facebook</a>
                     </div>
                 </div>
             </div>
