Alteração de texto

--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
                     </p>
                     <p>
                         Além disso, temos o importante intuito de promover a conscientização dos segurados a respeito de
-                        seus direitos e polêmicas relacionadas às suas aposentadorias, divulgando esses temas, bem como
-                        incentivando e promovendo o debate democrático.
+                        seus direitos e controvérsias relacionadas às suas aposentadorias, divulgando esses temas, bem
+                        como incentivando e promovendo o debate democrático.
                     </p>
                 </div>
             </div>
