Link facebook e texto justificado

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                     onclick="scrollToElement('work')">
                     O que é a revisão?
                 </a>
-                <!-- <a href="#tab-section" class="navigation-link w-nav-link" style="max-width: 940px;"
-                    onclick="scrollToElement('tab-section')">
-                    Empresa
-                </a> -->
+                <a href="https://m.facebook.com/groups/165037688638145/?ref=share&mibextid=S66gvF" target="_blank"
+                    class="navigation-link w-nav-link" style="max-width: 940px;">
+                    Participe do grupo
+                </a>
                 <a href="https://wa.link/9dmvzm" target="_blank" class="navigation-link w-nav-link contact"
                     style="max-width: 940px;" onclick="scrollToElement('tab-section')">
                     Contato
@@ -74,7 +74,7 @@
         <div class="w-container">
             <div class="section-title-group" id="about">
                 <h2 class="section-heading centered">Quem somos</h2>
-                <div class="section-subheading" style="text-align: left;">
+                <div class="section-subheading">
                     <p>
                         Somos um Grupo de aposentados com direito à Revisão da Vida Toda – RVT, familiares e
                         simpatizantes
@@ -258,7 +258,7 @@
                 <div class="spc w-col w-col-4">
                     <h5>Para mais informações.</h5>
                     <p>
-                        <a class="link" href="mailto:contato@associacaorvt.com.br">contato@associacaorvt.com.br</a>
+                        <a class="link" href="mailto:associacaorvt@gmail.com">associacaorvt@gmail.com</a>
                     </p>
                 </div>
                 <div class="spc w-col w-col-4">
@@ -274,7 +274,11 @@
                             class="info-icon"><a href="#" class="footer-link with-icon">Linkedin</a>
                     </div>
                     <div class="footer-link-wrapper w-clearfix"><img src="./assets/imgs/facebook.svg" width="20" alt=""
-                            class="info-icon"><a href="#" class="footer-link with-icon">Facebook</a>
+                            class="info-icon">
+                        <a href="https://m.facebook.com/groups/165037688638145/?ref=share&mibextid=S66gvF"
+                            class="footer-link with-icon" target="_blank">
+                            Facebook
+                        </a>
                     </div>
                 </div>
             </div>
